<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout


    android:paddingTop="10dp"
    android:layout_marginLeft="5dp"
    android:layout_marginRight="5dp"
    android:layout_marginTop="5dp"
    android:background="@drawable/backgroundshape"
    xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    xmlns:app="http://schemas.android.com/apk/res-auto">

    <ImageView
        android:id="@+id/deleteBtn"
        android:contentDescription="@string/todo"
        android:layout_width="30dp"
        android:layout_height="30dp"
        android:src="@drawable/ic_baseline_delete_24"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        android:layout_marginTop="30dp"
        android:layout_marginEnd="20dp"
        />

    <ImageView
        android:src="@drawable/download"
        android:layout_marginStart="10dp"
        android:contentDescription="@string/todo"
        android:id="@+id/flag"
        android:layout_width="40dp"
        android:layout_height="20dp"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintBottom_toTopOf="@+id/constraint"
        />

    <TextView
        android:textSize="22sp"
        android:id="@+id/countryName"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintLeft_toRightOf="@id/flag"
        android:layout_marginLeft="10dp"
        android:text="@string/country_india"
        android:textColor="#000"
        android:fontFamily="@font/roboto_medium"
        />

    <TextView
        android:id="@+id/CountryPopulation"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        app:layout_constraintTop_toBottomOf="@id/countryName"
        app:layout_constraintLeft_toRightOf="@id/flag"
        android:layout_marginLeft="10dp"
        android:text="@string/current_population_135_cr"
        android:textColor="#000"
        android:fontFamily="@font/roboto_medium"
        />


    <androidx.constraintlayout.widget.ConstraintLayout
        android:id="@+id/constraint"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        app:layout_constraintTop_toBottomOf="@id/CountryPopulation"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        android:layout_margin="5dp"
        app:layout_constraintBottom_toBottomOf="parent"
        android:paddingBottom="10dp"
        >
        <TextView
            app:layout_constraintRight_toRightOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintLeft_toLeftOf="parent"
            android:layout_marginTop="10dp"
            android:id="@+id/region"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginStart="10dp"
            android:text="@string/region"
            android:textColor="#000"
            android:fontFamily="@font/roboto_medium"
            />

        <TextView
            app:layout_constraintRight_toRightOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/region"
            app:layout_constraintLeft_toLeftOf="parent"
            android:layout_marginTop="10dp"
            android:id="@+id/subRegion"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginStart="10dp"
            android:text="@string/subregion"
            android:textColor="#000"
            android:fontFamily="@font/roboto_medium"
            />

        <TextView
            app:layout_constraintRight_toRightOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/subRegion"
            app:layout_constraintLeft_toLeftOf="parent"
            android:layout_marginTop="10dp"
            android:id="@+id/capital"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginStart="10dp"
            android:text="@string/capital"
            android:textColor="#000"
            android:fontFamily="@font/roboto_medium"
            />

        <TextView
            app:layout_constraintRight_toRightOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/capital"
            app:layout_constraintLeft_toLeftOf="parent"
            android:layout_marginTop="10dp"
            android:id="@+id/borders"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginStart="10dp"
            android:text="@string/borders"
            android:textColor="#000"
            android:fontFamily="@font/roboto_medium"
            />
    <TextView
        app:layout_constraintRight_toRightOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/borders"
            app:layout_constraintLeft_toLeftOf="parent"
            android:layout_marginTop="10dp"
            android:id="@+id/languages"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginStart="10dp"
            android:text="@string/languages"
            android:textColor="#000"
            android:fontFamily="@font/roboto_medium"
            />


    </androidx.constraintlayout.widget.ConstraintLayout>

</androidx.constraintlayout.widget.ConstraintLayout>